Updating profiles and datasoource configs

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,7 +10,7 @@ spring.datasource.hikari.idle-timeout=300000
 spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.connection-timeout=30000
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.generate-ddl = true
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update  
