--- a/secret.yaml
+++ b/secret.yaml
@@ -5,4 +5,4 @@ metadata:
   namespace: vgnagp-ns
 type: Opaque
 data:
-  spring.datasource.password: b2JoVHhTQXprcw==
+  spring.datasource.password: cGFzc3dvcmQ=
